# uvc-gadget

./: .exports  CMakeLists.txt  README.md  configure_gcc_toolchain
lib/compat/: glob.c
usb-gadget/: 4GBStick.sh  fstab.f2fs.hi3650  init.usb.configfs.rc  iso.sh  mountImage.sh
